[package]
name = "Terra2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
strum = "0.26"
strum_macros = "0.26.4"
lazy_static = "1.5.0"
sdl2 = { version = "0.37", features = ["bundled"] }
rustc-hash = "2.0.0"
rayon = "1.10.0"
rurel = "0.6.0"
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }